<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">ShopApp</string>
    <string name="type_username">Type your username here</string>
    <string name="type_password">Type your password here</string>
    <string name="login">Login</string>
    <string name="forget_password">Forget your password?</string>
    <string name="back">Back</string>
    <string name="register">Register</string>
    <string name="to_login">To login?</string>
    <string name="have_account">Have a account?</string>
    <string name="confirm_password">Confirm your password</string>
    <string name="register_success">Register successful!</string>

    <string name="main_news">Message</string>
    <string name="main_home">Portal</string>
    <string name="more">More</string>
    <string name="main_manage_date">Time</string>
    <string name="main_friends">Friends</string>
    <string name="main_account">Account</string>
    <string name="main_usercenter">UserCenter</string>
    <string name="shop_cart">ShopCarts</string>
    <string name="mobile_and_app_info">Show Mobile and app info</string>
</resources>
