<?xml version="1.0" encoding="utf-8"?>

<TabHost xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@android:id/tabhost"
    android:background="#f8f8f8"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
    <LinearLayout android:orientation="vertical" android:layout_height="fill_parent" android:layout_width="fill_parent">
        <FrameLayout android:id="@android:id/tabcontent" android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_weight="1.0"/>
        <TabWidget android:id="@android:id/tabs" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_weight="0.0"/>
        <RadioGroup android:id="@+id/main_radio" android:orientation="horizontal" android:gravity="center_vertical" android:layout_gravity="bottom"
            android:layout_height="wrap_content" android:layout_width="fill_parent" android:background="@drawable/maintab_toolbar_bg">
            <RadioButton  android:id="@+id/radio_button0" android:layout_marginTop="2.0dip" android:text="@string/main_home" android:drawableTop="@drawable/icon_1_n" style="@style/main_tab_bottom" />
            <RadioButton  android:id="@+id/radio_button1" android:layout_marginTop="2.0dip" android:text="@string/main_news" android:drawableTop="@drawable/icon_2_n" style="@style/main_tab_bottom" />
            <RadioButton  android:id="@+id/radio_button2" android:layout_marginTop="2.0dip" android:text="@string/main_manage_date" android:drawableTop="@drawable/icon_3_n" style="@style/main_tab_bottom" />
            <RadioButton  android:id="@+id/radio_button3" android:layout_marginTop="2.0dip" android:text="@string/main_usercenter" android:drawableTop="@drawable/icon_4_n" style="@style/main_tab_bottom" />
            <RadioButton  android:id="@+id/radio_button4" android:layout_marginTop="2.0dip" android:text="@string/more" android:drawableTop="@drawable/icon_5_n" style="@style/main_tab_bottom" />
        </RadioGroup>
    </LinearLayout>
</TabHost>