<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="40dp">

        <TextView
            android:text="@string/back"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="10dp"
            android:layout_centerVertical="true"
            android:textColor="#FFFFFF"
            android:textSize="18dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView android:text="@string/login"
            android:layout_centerInParent="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="2dip"
            android:layout_centerVertical="true"
            android:textColor="#FFFFFF"
            android:textSize="22dp"/>

        <TextView
            android:id="@+id/register_text_view"
            android:text="@string/register"
            android:layout_alignParentRight="true"
            android:layout_marginRight="10dp"
            android:textColor="#FFFFFF"
            android:textSize="18dp"
            android:layout_centerVertical="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
</RelativeLayout>