<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/login_page"
    android:background="#f8f8f8"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
        <EditText android:id="@+id/login_username"
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:layout_margin="10dp"
            android:hint="@string/type_username"/>
        <EditText android:id="@+id/login_password"
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:layout_margin="10dp"
            android:password="true"
            android:layout_below="@id/login_username"
            android:hint="@string/type_password"/>

        <Button android:id="@+id/login_button"
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            style="@style/login_button"
            />

        <TextView android:id="@+id/login_forget_password"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_below="@id/login_button"
            android:layout_marginTop="20dp"
            android:layout_marginRight="10dp"
            android:layout_alignParentRight="true"
            android:text="@string/forget_password"
            />
</RelativeLayout>